# Chessy

./: CMakeLists.txt  README.md
Include/: ChessEngine.h  ChessMove.h
Include/ChessEngine/: ChessEngine.h  ChessMove.h
Include/Chessy/: Bool.h  ChessAI.h  ChessEngine.h  ChessMove.h  Constants.h
Src/: ChessAI.c  ChessEngine.c  ChessMove.c  Main.c  main.c
Src/ChessEngine/: ChessEngine.c  ChessMove.c
